# ego

./: CMakeLists.txt  TODO.md  game_instance.cpp  game_instance.hpp  main.cpp  meson.build  sdl_utility.cpp
drawing/: TODO.md  colbuf.hpp  colbuf_fwd.hpp  drawing.hpp  enums.hpp  indbuf.hpp  indbuf_fwd.hpp  mesh.hpp  mesh_createinfo.hpp  mesh_fwd.hpp  renderer.cpp  renderer.hpp  renderer_fwd.hpp  scene.hpp  scene_createinfo.hpp  scene_fwd.hpp  sdlwindow.cpp  sdlwindow.hpp  submittable.hpp  texture.hpp  texture_createinfo.hpp  texture_fwd.hpp  todo.md  uvbuf.hpp  uvbuf_fwd.hpp  vertbuf.hpp  vertbuf_fwd.hpp  wishlist.md
drawing/gl_core/: mesh.cpp  mesh.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  scene2d.cpp  scene2d.hpp  scene3d.cpp  scene3d.hpp
drawing/gl_shared/: cache.cpp  cache.hpp  colbuf.cpp  colbuf.hpp  common.hpp  gl_es2_funcs.inl  gl_include.cpp  gl_include.hpp  indbuf.cpp  indbuf.hpp  mesh.cpp  mesh.hpp  mesh_listener.hpp  program.cpp  program.hpp  program_provider.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  shaders_container.hpp  texture.cpp  texture.hpp  uvbuf.cpp  uvbuf.hpp  vertbuf.cpp  vertbuf.hpp
include/ego/: ego_fwd.hpp  mesh.hpp  renderer.hpp  submittable.hpp  uvbuf.hpp  vertbuf.hpp
src/: renderer.cpp
src/gl_core/: renderer.cpp  scene2d.hpp  scene3d.cpp  scene3d.hpp
src/gl_es/: mesh.cpp  mesh.hpp  renderer.cpp  renderer.hpp  scene2d.cpp  scene2d.hpp  scene3d.cpp  scene3d.hpp
src/gl_shared/: cache.cpp  cache.hpp  colbuf.cpp  colbuf.hpp  common.hpp  gl_core_funcs.inl  gl_es2_funcs.inl  gl_include.cpp  gl_include.hpp  indbuf.hpp  mesh.cpp  mesh.hpp  mesh_listener.hpp  program.hpp  program_provider.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  texture.cpp  texture.hpp  uvbuf.hpp  vertbuf.cpp  vertbuf.hpp
